--- a/server/src/main/resources/messages.properties
+++ b/server/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-AbstractAccessDecisionManager.accessDenied=Access is denied
+AbstractAccessDecisionManager.accessDenied=请求拒绝,权限不足！
 AbstractLdapAuthenticationProvider.emptyPassword=Empty Password
 AbstractSecurityInterceptor.authenticationNotFound=An Authentication object was not found in the SecurityContext
 AbstractUserDetailsAuthenticationProvider.badCredentials=Bad credentials
